manifests-qa/qa-rate-limit.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-qa
spec:
  rateLimit:
    average: 10
    burst: 15
