manifests-qa/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  type: ClusterIP
  selector:
    app: trivial-go-web-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
