manifests-qa/route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qa-route
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/qa`)
    kind: Rule
    services:
    - name: qa-service
      port: 80
    middlewares:
      - name: qa-rate-limit
